tests/NormalTests/paczka1/small_fuzzy/17596074.err
Error in line 8: XQurJ A717 15,0
Error in line 9: vvdLU9 A717 88,2
Error in line 10: XQurJ A869 38,7
